--- a/nice_notebooks/timeAnalysis.ipynb
+++ b/nice_notebooks/timeAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,9 @@
     "import seaborn as sns\n",
     "from os import path\n",
     "import os\n",
-    "sns.set()"
+    "sns.set()\n",
+    "current_path = path.split(path.abspath(os.getcwd()))[0]\n",
+    "path_to_data = path.join(current_path, 'data', 'houses')\n"
    ]
   },
   {
@@ -27,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -61,8 +63,6 @@
    ],
    "source": [
     "house_id = 64613\n",
-    "current_path = path.split(path.abspath(os.getcwd()))[0]\n",
-    "path_to_data = path.join(current_path, 'data', 'houses')\n",
     "df = pd.read_csv(path.join(path_to_data,str(house_id)+'.csv'))\n",
     "df.drop(columns=['Unnamed: 0'], inplace=True)\n",
     "\n",
