Added list of houses and loads to notebooks

--- a/nice_notebooks/minimise_cost.ipynb
+++ b/nice_notebooks/minimise_cost.ipynb
@@ -4,7 +4,21 @@
    "cell_type": "markdown",
    "source": [
     "# Minimise Cost with Tariff\n",
-    "### Select House"
+    "This notebook minimises the cost for the house by shifting the load throughout the day\n",
+    "The load is simulated by taking the average duration is runs annually, and the rated power\n",
+    "\n",
+    "There are 4 different tariffs that can be applied.\n",
+    "\n",
+    "\n",
+    "## Select a house\n",
+    "| HouseID   |   Load        |\n",
+    "|---------  |   ------      |\n",
+    "|64613      |   hot_water   |\n",
+    "|70210      |   pool        |\n",
+    "|70243      |   hot_water   |\n",
+    "|70277      |   hot_water   |\n",
+    "|91912      |   pool        |\n",
+    "|91910      |   hot_water   |"
    ],
    "metadata": {
     "collapsed": false,
