--- a/nice_notebooks/normaliseHouses.ipynb
+++ b/nice_notebooks/normaliseHouses.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Histograms all the loads within all the houses\n",
+    "This notebook creates histograms of all the loads in all the houses to investigate which ones will\n",
+    "be interesting to investigate further.\n",
+    "\n",
+    "Loads that have distinct patterns will have clearly defined peaks.\n",
+    "\n",
+    "Houses like 91341 do not have a monitor that can be controlled"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
@@ -16,6 +34,9 @@
     "import glob, os\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
+    "from os import path\n",
+    "from os import getcwd, listdir\n",
+    "path_to_data = path.join('..', 'data', 'houses')\n",
     "sns.set()\n",
     "# days = [['2019-01-01','2019-02-01'], '2019-04-01', '2019-07-01', '2019-12-01']\n",
     "days = ['2019']\n",
@@ -25,7 +46,7 @@
     "\n",
     "\n",
     "def show_energy(id):\n",
-    "    h = pd.read_csv('../data/'+str(id)+'.csv')\n",
+    "    h = pd.read_csv(path.join(path_to_data,str(id)+'.csv'))\n",
     "    h = h.drop('Unnamed: 0', axis=1)\n",
     "    h = h.set_index('reading_datetime')\n",
     "    h.index = pd.to_datetime(h.index)\n",
