--- a/nice_notebooks/maximise_pv_utilisation.ipynb
+++ b/nice_notebooks/maximise_pv_utilisation.ipynb
@@ -4,7 +4,17 @@
    "cell_type": "markdown",
    "source": [
     "# Maximising PV self consumption (PV Utilisation)\n",
-    "## Select a house"
+    "This Notebook maximises PV Self consumption by moving the controlled load start time throughout the day\n",
+    "The start time that results in the maximum PV self consumption is saved\n",
+    "## Select a house\n",
+    "| HouseID   |   Load        |\n",
+    "|---------  |   ------      |\n",
+    "|64613      |   hot_water   |\n",
+    "|70210      |   pool        |\n",
+    "|70243      |   hot_water   |\n",
+    "|70277      |   hot_water   |\n",
+    "|91912      |   pool        |\n",
+    "|91910      |   hot_water   |"
    ],
    "metadata": {
     "collapsed": false
