--- a/nice_notebooks/rated_power_duration.ipynb
+++ b/nice_notebooks/rated_power_duration.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "markdown",
    "source": [
     "# Examining Rated Power and Average Duration of Load in House\n",
-    "## List of Houses in Dataset"
+    "## Select a house\n",
+    "| HouseID   |   Load        |\n",
+    "|---------  |   ------      |\n",
+    "|64613      |   hot_water   |\n",
+    "|70210      |   pool        |\n",
+    "|70243      |   hot_water   |\n",
+    "|70277      |   hot_water   |\n",
+    "|91912      |   pool        |\n",
+    "|91910      |   hot_water   |"
    ],
    "metadata": {
     "collapsed": false,
