--- a/nice_notebooks/maximise_pv_utilisation.ipynb
+++ b/nice_notebooks/maximise_pv_utilisation.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -88,14 +88,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
       "text/plain": "                       load      PV       AC  total_use  grid_import  \\\nreading_datetime                                                       \n2019-01-01 00:00:00  0.0194 -0.0733  70.0850    70.0311      70.1044   \n2019-01-01 00:05:00  0.0197 -0.0736  69.2019    69.1480      69.2216   \n2019-01-01 00:10:00  0.0192 -0.0728  66.6908    66.6372      66.7100   \n2019-01-01 00:15:00  0.0194 -0.0733  68.1369    68.0830      68.1563   \n2019-01-01 00:20:00  0.0225 -0.0742  81.0847    81.0330      81.1072   \n\n                     grid_export  \nreading_datetime                  \n2019-01-01 00:00:00          0.0  \n2019-01-01 00:05:00          0.0  \n2019-01-01 00:10:00          0.0  \n2019-01-01 00:15:00          0.0  \n2019-01-01 00:20:00          0.0  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>load</th>\n      <th>PV</th>\n      <th>AC</th>\n      <th>total_use</th>\n      <th>grid_import</th>\n      <th>grid_export</th>\n    </tr>\n    <tr>\n      <th>reading_datetime</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2019-01-01 00:00:00</th>\n      <td>0.0194</td>\n      <td>-0.0733</td>\n      <td>70.0850</td>\n      <td>70.0311</td>\n      <td>70.1044</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2019-01-01 00:05:00</th>\n      <td>0.0197</td>\n      <td>-0.0736</td>\n      <td>69.2019</td>\n      <td>69.1480</td>\n      <td>69.2216</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2019-01-01 00:10:00</th>\n      <td>0.0192</td>\n      <td>-0.0728</td>\n      <td>66.6908</td>\n      <td>66.6372</td>\n      <td>66.7100</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2019-01-01 00:15:00</th>\n      <td>0.0194</td>\n      <td>-0.0733</td>\n      <td>68.1369</td>\n      <td>68.0830</td>\n      <td>68.1563</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2019-01-01 00:20:00</th>\n      <td>0.0225</td>\n      <td>-0.0742</td>\n      <td>81.0847</td>\n      <td>81.0330</td>\n      <td>81.1072</td>\n      <td>0.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -156,7 +156,7 @@
       "2019-01-29\n",
       "2019-01-30\n",
       "2019-01-31\n",
-      "Time taken 16.23s\n",
+      "Time taken 14.74s\n",
       "done\n"
      ]
     }
@@ -208,15 +208,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "The reason the load total is greater for after shifting is the generate_load function\n",
+    "makes a load from the average_duration and rated_power.\n",
+    "\n",
+    "This is an estimation of the load"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Before PV Self Consumption Maximising\n",
       "load total 56.95kWh\n",
       "load serviced by PV Total 0.00kWh\n",
+      "\n",
+      "After PV Self Consumption Maximising\n",
       "load total 78.19kWh\n",
       "load serviced by PV Total 65.89kWh\n"
      ]
@@ -227,15 +245,15 @@
     "pv_utilisation = pd.concat([data_range.PV, data_range.total_use], axis=1).min(axis=1).clip(lower=0)\n",
     "house_consumption_when_loadon_pvgen = np.where(((data_range.PV > 1) & (load > 10)), pv_utilisation, 0)\n",
     "load_serviced_by_PV = (house_consumption_when_loadon_pvgen - data_range.total_use - data_range.load).clip(lower=0)\n",
-    "\n",
+    "print('Before PV Self Consumption Maximising')\n",
     "print(\"load total \" + \"{:.2f}\".format(data_range.load.sum() / 1000) + \"kWh\")\n",
     "print(\"load serviced by PV Total \" + \"{:.2f}\".format(load_serviced_by_PV.sum() / 1000) + \"kWh\")\n",
-    "\n",
+    "print()\n",
     "house_consumption_when_loadon_pvgen = pd.DataFrame(index=data_range.PV.index)\n",
     "house_consumption_when_loadon_pvgen['power'] = np.where(((data_range.PV > 1) & (new_load > 10)), new_pv_utilisation, 0)\n",
     "house_consumption_when_loadon_pvgen=house_consumption_when_loadon_pvgen.power\n",
     "load_serviced_by_PV = (house_consumption_when_loadon_pvgen - data_range.total_use - data_range.load).clip(lower=0)\n",
-    "\n",
+    "print('After PV Self Consumption Maximising')\n",
     "print(\"load total \" + \"{:.2f}\".format(new_load.sum() / 1000) + \"kWh\")\n",
     "print(\"load serviced by PV Total \" + \"{:.2f}\".format(load_serviced_by_PV.sum() / 1000) + \"kWh\")"
    ],
@@ -248,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
