Numbered the notebooks for clarity

--- a/nice_notebooks/6_minimise_cost.ipynb
+++ b/nice_notebooks/6_minimise_cost.ipynb
@@ -31,7 +31,10 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -62,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -96,18 +99,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "                       load      PV       AC  total_use  grid_import  \\\nreading_datetime                                                       \n2019-01-01 00:00:00  0.0194 -0.0733  70.0850    70.0311      70.1044   \n2019-01-01 00:05:00  0.0197 -0.0736  69.2019    69.1480      69.2216   \n2019-01-01 00:10:00  0.0192 -0.0728  66.6908    66.6372      66.7100   \n2019-01-01 00:15:00  0.0194 -0.0733  68.1369    68.0830      68.1563   \n2019-01-01 00:20:00  0.0225 -0.0742  81.0847    81.0330      81.1072   \n\n                     grid_export  \nreading_datetime                  \n2019-01-01 00:00:00          0.0  \n2019-01-01 00:05:00          0.0  \n2019-01-01 00:10:00          0.0  \n2019-01-01 00:15:00          0.0  \n2019-01-01 00:20:00          0.0  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>load</th>\n      <th>PV</th>\n      <th>AC</th>\n      <th>total_use</th>\n      <th>grid_import</th>\n      <th>grid_export</th>\n    </tr>\n    <tr>\n      <th>reading_datetime</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2019-01-01 00:00:00</th>\n      <td>0.0194</td>\n      <td>-0.0733</td>\n      <td>70.0850</td>\n      <td>70.0311</td>\n      <td>70.1044</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2019-01-01 00:05:00</th>\n      <td>0.0197</td>\n      <td>-0.0736</td>\n      <td>69.2019</td>\n      <td>69.1480</td>\n      <td>69.2216</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2019-01-01 00:10:00</th>\n      <td>0.0192</td>\n      <td>-0.0728</td>\n      <td>66.6908</td>\n      <td>66.6372</td>\n      <td>66.7100</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2019-01-01 00:15:00</th>\n      <td>0.0194</td>\n      <td>-0.0733</td>\n      <td>68.1369</td>\n      <td>68.0830</td>\n      <td>68.1563</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2019-01-01 00:20:00</th>\n      <td>0.0225</td>\n      <td>-0.0742</td>\n      <td>81.0847</td>\n      <td>81.0330</td>\n      <td>81.1072</td>\n      <td>0.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "data = extract_data_from_house(house_id, load_type)\n",
     "rated_power = extract_rated_power(data.load)\n",
@@ -137,16 +130,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tariff Name: OriginGo\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "tariff_type = 'TOU'\n",
     "tariffs = tf.read_tariffs()\n",
@@ -167,18 +152,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Import Cost $1306.76\n",
-      "Export Revenue $249.07\n",
-      "Net Cost $1057.69\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "data['import_cost'] = tariff.get_cost(data['2019'][['grid_import', 'load']] / 1000)\n",
     "data['export_revenue'] = (data['2019'].grid_export / 1000) * tariff.get_fit()\n",
@@ -199,33 +174,13 @@
     "#### Preload Possible Load Times Using Average Duration and Rated Power"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.31017231941223145\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "                     00:00:00  00:05:00  00:10:00  00:15:00  00:20:00  \\\nreading_datetime                                                        \n2019-01-01 00:00:00  132.7443    0.0000    0.0000    0.0000    0.0000   \n2019-01-01 00:05:00  132.7443  132.7443    0.0000    0.0000    0.0000   \n2019-01-01 00:10:00  132.7443  132.7443  132.7443    0.0000    0.0000   \n2019-01-01 00:15:00  132.7443  132.7443  132.7443  132.7443    0.0000   \n2019-01-01 00:20:00  132.7443  132.7443  132.7443  132.7443  132.7443   \n\n                     00:25:00  00:30:00  00:35:00  00:40:00  00:45:00  ...  \\\nreading_datetime                                                       ...   \n2019-01-01 00:00:00       0.0       0.0       0.0       0.0       0.0  ...   \n2019-01-01 00:05:00       0.0       0.0       0.0       0.0       0.0  ...   \n2019-01-01 00:10:00       0.0       0.0       0.0       0.0       0.0  ...   \n2019-01-01 00:15:00       0.0       0.0       0.0       0.0       0.0  ...   \n2019-01-01 00:20:00       0.0       0.0       0.0       0.0       0.0  ...   \n\n                     21:40:00  21:45:00  21:50:00  21:55:00  22:00:00  \\\nreading_datetime                                                        \n2019-01-01 00:00:00       0.0       0.0       0.0       0.0       0.0   \n2019-01-01 00:05:00       0.0       0.0       0.0       0.0       0.0   \n2019-01-01 00:10:00       0.0       0.0       0.0       0.0       0.0   \n2019-01-01 00:15:00       0.0       0.0       0.0       0.0       0.0   \n2019-01-01 00:20:00       0.0       0.0       0.0       0.0       0.0   \n\n                     22:05:00  22:10:00  22:15:00  22:20:00  22:25:00  \nreading_datetime                                                       \n2019-01-01 00:00:00       0.0       0.0       0.0       0.0       0.0  \n2019-01-01 00:05:00       0.0       0.0       0.0       0.0       0.0  \n2019-01-01 00:10:00       0.0       0.0       0.0       0.0       0.0  \n2019-01-01 00:15:00       0.0       0.0       0.0       0.0       0.0  \n2019-01-01 00:20:00       0.0       0.0       0.0       0.0       0.0  \n\n[5 rows x 270 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>00:00:00</th>\n      <th>00:05:00</th>\n      <th>00:10:00</th>\n      <th>00:15:00</th>\n      <th>00:20:00</th>\n      <th>00:25:00</th>\n      <th>00:30:00</th>\n      <th>00:35:00</th>\n      <th>00:40:00</th>\n      <th>00:45:00</th>\n      <th>...</th>\n      <th>21:40:00</th>\n      <th>21:45:00</th>\n      <th>21:50:00</th>\n      <th>21:55:00</th>\n      <th>22:00:00</th>\n      <th>22:05:00</th>\n      <th>22:10:00</th>\n      <th>22:15:00</th>\n      <th>22:20:00</th>\n      <th>22:25:00</th>\n    </tr>\n    <tr>\n      <th>reading_datetime</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2019-01-01 00:00:00</th>\n      <td>132.7443</td>\n      <td>0.0000</td>\n      <td>0.0000</td>\n      <td>0.0000</td>\n      <td>0.0000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2019-01-01 00:05:00</th>\n      <td>132.7443</td>\n      <td>132.7443</td>\n      <td>0.0000</td>\n      <td>0.0000</td>\n      <td>0.0000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2019-01-01 00:10:00</th>\n      <td>132.7443</td>\n      <td>132.7443</td>\n      <td>132.7443</td>\n      <td>0.0000</td>\n      <td>0.0000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2019-01-01 00:15:00</th>\n      <td>132.7443</td>\n      <td>132.7443</td>\n      <td>132.7443</td>\n      <td>132.7443</td>\n      <td>0.0000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2019-01-01 00:20:00</th>\n      <td>132.7443</td>\n      <td>132.7443</td>\n      <td>132.7443</td>\n      <td>132.7443</td>\n      <td>132.7443</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 270 columns</p>\n</div>"
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "index = data['2019-01-01'].index\n",
     "possible_loads = pd.DataFrame(index=index)\n",
@@ -290,53 +245,13 @@
     "Loops over all the possible load start times and returns the load and cost of the minimum load start time"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2019-02-01\n",
-      "2019-02-02\n",
-      "2019-02-03\n",
-      "2019-02-04\n",
-      "2019-02-05\n",
-      "2019-02-06\n",
-      "2019-02-07\n",
-      "2019-02-08\n",
-      "2019-02-09\n",
-      "2019-02-10\n",
-      "2019-02-11\n",
-      "2019-02-12\n",
-      "2019-02-13\n",
-      "2019-02-14\n",
-      "2019-02-15\n",
-      "2019-02-16\n",
-      "2019-02-17\n",
-      "2019-02-18\n",
-      "2019-02-19\n",
-      "2019-02-20\n",
-      "2019-02-21\n",
-      "2019-02-22\n",
-      "2019-02-23\n",
-      "2019-02-24\n",
-      "2019-02-25\n",
-      "2019-02-26\n",
-      "2019-02-27\n",
-      "2019-02-28\n",
-      "13.435747861862183\n",
-      "done\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# Date Range to Minimise Cost\n",
     "date_range = '2019-02'\n",
@@ -389,10 +304,7 @@
     "### Makes a new Dataframe with the minimised load instead of the real load"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
