--- a/nice_notebooks/7_SeasonalEstimates.ipynb
+++ b/nice_notebooks/7_SeasonalEstimates.ipynb
@@ -372,9 +372,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "quickpandas",
+   "name": "pycharm-16601492",
    "language": "python",
-   "display_name": "QuickPandas"
+   "display_name": "PyCharm (Thesis1)"
   },
   "language_info": {
    "codemirror_mode": {
