Added a notebook that uses an estimate of the load from seasonal median profiles

--- a/nice_notebooks/8_minimise_cost_use_estimate.ipynb
+++ b/nice_notebooks/8_minimise_cost_use_estimate.ipynb
@@ -9,12 +9,18 @@
     }
    },
    "source": [
-    "# Minimise Cost with Tariff\n",
+    "# Minimise Cost with Tariff Using Estimate of Daily Load\n",
     "This notebook minimises the cost for the house by shifting the load throughout the day\n",
     "The load is simulated by taking the average duration is runs annually, and the rated power\n",
     "\n",
     "There are 4 different tariffs that can be applied.\n",
     "\n",
+    "The Daily Total Load is estimated by taking the median load profile for each season and\n",
+    "scaling it to the total demand of each day.\n",
+    "\n",
+    "This is the best estimate possible for this method.\n",
+    "\n",
+    "The next step would be to estimate the total demand for each day.\n",
     "\n",
     "## Select a house\n",
     "| HouseID   |   Load        |\n",
@@ -350,7 +356,11 @@
    "cell_type": "markdown",
    "source": [
     "### Minimising Cost Loop\n",
-    "Loops over all the possible load start times and returns the load and cost of the minimum load start time"
+    "Loops over all the possible load start times and returns the load and cost of the minimum load start time\n",
+    "Each day is classified into a season. The median load profile for that season is used to estimate \n",
+    "the total load profile for that day.\n",
+    "\n",
+    "The seasonal median load profile is scaled by the total demand for that day"
    ],
    "metadata": {
     "collapsed": false
@@ -408,6 +418,8 @@
     "for day in days_in_set:\n",
     "    date = str(day)\n",
     "    print(date)\n",
+    "    \n",
+    "    # Season is extracted and normalised season median profile is scaled \n",
     "    season = get_season(day)\n",
     "    total_use_sum = data[date].total_use.sum()\n",
     "    if season == 'summer': total_use_without_load = normalised_median.summer * total_use_sum\n",
